--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1386,7 +1386,9 @@ en:
         manager: "Protocol management"
         edit: "Edit protocol"
     protocols_io_import:
+      import_description_notice: "The protocols description is listed below under \"Protocol info\"."
       preview:
+        prot_desc: "Protocol Description: "
         b_s_p: "Before starting protocol information:"
         warn: "Protocol warning:"
         guideln: "Guidelines:"
@@ -1400,7 +1402,7 @@ en:
         vers: "Version:"
         repo: "Repository:"
         os: "OS name , OS version:"
-        sub_prot: "This protocol also contains an attached sub-protocol:"
+        sub_prot: "This step also contains an attached sub-protocol:"
         auth: "Author:"
         manu_cit: "Manuscript citation:"
         pbl_date: "Publish date:"
@@ -1426,7 +1428,7 @@ en:
           desc: "<br>Description: "
           os: "<br>OS name , OS version: "
         sub_protocol:
-          title: "<br><strong>This protocol also contains an attached sub-protocol: </strong>"
+          title: "<br><strong>This step also contains an attached sub-protocol: </strong>"
           author: "<br>Author: "
         safety_infor:
           title: "<br><strong>Safety information: </strong>"
