--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1411,7 +1411,7 @@ en:
         key_wrd: "Keywords:"
         tags: "Tags:"
       comp_append:
-        table_moved: "<br><strong>There was a table here, it was moved to scinote table elements</strong>"
+        table_moved: "<br><strong>There was a table here, it was moved to the end of this step. </strong>"
         missing_step: "Step"
         missing_desc: "Description missing"
         general_link: "<br>Link: "
